--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="16dp"
 
         android:orientation="horizontal">
 
@@ -49,7 +49,7 @@
         android:textSize="16dp" />
 
     <EditText
-
+        android:id="@+id/emailEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
@@ -70,8 +70,8 @@
         android:layout_weight="1"></View>
 
     <Button
+        android:id="@+id/recover_password"
         android:layout_width="match_parent"
-
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
         android:layout_marginBottom="16dp"
