--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,11 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="45dp"
-
+        android:layout_marginTop="16dp"
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/signup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="7"
@@ -42,7 +42,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="138dp"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="21dp"
         android:paddingTop="5dp"
@@ -71,7 +71,8 @@
         android:layout_marginTop="19dp"
         android:hint="@string/password"
         android:textColorHint="@color/emai_pass_hint"
-        app:backgroundTint="@color/black" />
+        app:backgroundTint="@color/black"
+        android:inputType="textPassword"/>
 
     <View
         android:layout_width="match_parent"
