--- a/app/src/main/res/layout/activity_note_edit.xml
+++ b/app/src/main/res/layout/activity_note_edit.xml
@@ -81,7 +81,7 @@
                     android:lineSpacingExtra="5sp"
                     android:textColor="#000000"
                     android:textSize="17sp"
-                    tools:text="Trip to San fran" />
+                    android:text="Trip to San fran" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -92,7 +92,7 @@
                     android:lineSpacingExtra="4sp"
                     android:textColor="#4a4a4a"
                     android:textSize="12sp"
-                    tools:text="18/06/12" />
+                    android:text="18/06/12" />
 
             </LinearLayout>
 
@@ -104,7 +104,7 @@
                 android:lineSpacingExtra="4sp"
                 android:textColor="#4d5468"
                 android:textSize="13sp"
-                tools:text="San fran was one of the coolest places i have ever been all the beautiful sightseeing and …" />
+                android:text="San fran was one of the coolest places i have ever been all the beautiful sightseeing and …" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -140,7 +140,7 @@
                     android:lineSpacingExtra="5sp"
                     android:textColor="#000000"
                     android:textSize="17sp"
-                    tools:text="Shopping list" />
+                    android:text="Shopping list" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -151,7 +151,7 @@
                     android:lineSpacingExtra="4sp"
                     android:textColor="#4a4a4a"
                     android:textSize="12sp"
-                    tools:text="18/06/12" />
+                    android:text="18/06/12" />
 
             </LinearLayout>
 
@@ -163,7 +163,7 @@
                 android:lineSpacingExtra="4sp"
                 android:textColor="#4d5468"
                 android:textSize="13sp"
-                tools:text="So far, this is what we need for our trip:" />
+                android:text="So far, this is what we need for our trip:" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -200,7 +200,7 @@
                     android:lineSpacingExtra="5sp"
                     android:textColor="#000000"
                     android:textSize="17sp"
-                    tools:text="Trip to San fran" />
+                    android:text="Trip to San fran" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -211,7 +211,7 @@
                     android:lineSpacingExtra="4sp"
                     android:textColor="#4a4a4a"
                     android:textSize="12sp"
-                    tools:text="18/06/12" />
+                    android:text="18/06/12" />
 
             </LinearLayout>
 
@@ -223,7 +223,7 @@
                 android:lineSpacingExtra="4sp"
                 android:textColor="#4d5468"
                 android:textSize="13sp"
-                tools:text="San fran was one of the coolest places i have ever been all the beautiful sightseeing and …" />
+                android:text="San fran was one of the coolest places i have ever been all the beautiful sightseeing and …" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -260,7 +260,7 @@
                     android:lineSpacingExtra="5sp"
                     android:textColor="#000000"
                     android:textSize="17sp"
-                    tools:text="Shopping list" />
+                    android:text="Shopping list" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -271,7 +271,7 @@
                     android:lineSpacingExtra="4sp"
                     android:textColor="#4a4a4a"
                     android:textSize="12sp"
-                    tools:text="18/06/12" />
+                    android:text="18/06/12" />
 
             </LinearLayout>
 
@@ -283,7 +283,7 @@
                 android:lineSpacingExtra="4sp"
                 android:textColor="#4d5468"
                 android:textSize="13sp"
-                tools:text="So far, this is what we need for our trip:" />
+                android:text="So far, this is what we need for our trip:" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
