--- a/app/src/main/res/layout/activity_singup.xml
+++ b/app/src/main/res/layout/activity_singup.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginHorizontal="15dp"
     android:orientation="vertical"
     tools:context=".SingupActivity">
 
@@ -12,11 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="45dp"
-
+        android:layout_marginTop="16dp"
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="7"
@@ -68,6 +67,7 @@
         android:layout_marginTop="19dp"
         android:hint="@string/password"
         android:textColorHint="@color/emai_pass_hint"
+        android:inputType="textPassword"
         app:backgroundTint="@color/black" />
 
     <View
