--- a/app/src/main/res/layout/home_pages.xml
+++ b/app/src/main/res/layout/home_pages.xml
@@ -35,7 +35,7 @@
             android:gravity="end"
             android:textColor="#7b1e58"
             android:textSize="17sp"
-            tools:text="Edit" />
+            android:text="Edit" />
     </LinearLayout>
 
 
@@ -51,7 +51,7 @@
         android:textSize="34sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header1"
-        tools:text="Browse" />
+        android:text="Browse" />
 
     <View
         android:id="@+id/divider1"
@@ -85,7 +85,7 @@
             android:lineSpacingExtra="7sp"
             android:textColor="#000000"
             android:textSize="20sp"
-            tools:text="Notebooks" />
+            android:text="Notebooks" />
 
         <TextView
             android:id="@+id/showall"
@@ -98,7 +98,7 @@
             android:lineSpacingExtra="5sp"
             android:textColor="#7b1e58"
             android:textSize="16sp"
-            tools:text="Show All" />
+            android:text="Show All" />
     </LinearLayout>
 
     <LinearLayout
@@ -127,8 +127,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:tint="@color/purple"
-            android:tintMode="screen"
             app:srcCompat="@drawable/ic_links_notebook" />
 
         <ImageView
@@ -163,7 +161,7 @@
             android:lineSpacingExtra="4sp"
             android:textColor="#7b1e58"
             android:textSize="13sp"
-            tools:text="Create Notebook" />
+            android:text="Create Notebook" />
 
         <TextView
             android:layout_width="0dp"
@@ -173,7 +171,7 @@
             android:lineSpacingExtra="5sp"
             android:textColor="#4a4a4a"
             android:textSize="15sp"
-            tools:text="Weekend Plans" />
+            android:text="Weekend Plans" />
 
         <TextView
             android:layout_width="0dp"
@@ -183,7 +181,7 @@
             android:lineSpacingExtra="5sp"
             android:textColor="#4a4a4a"
             android:textSize="15sp"
-            tools:text="To-Do" />
+            android:text="To-Do" />
     </LinearLayout>
 
     <LinearLayout
@@ -206,7 +204,7 @@
             android:lineSpacingExtra="7sp"
             android:textColor="#000000"
             android:textSize="20sp"
-            tools:text="Notes" />
+            android:text="Notes" />
 
         <TextView
             android:id="@+id/showall2"
@@ -219,7 +217,7 @@
             android:lineSpacingExtra="5sp"
             android:textColor="#7b1e58"
             android:textSize="16sp"
-            tools:text="Show All"
+            android:text="Show All"
 
             />
     </LinearLayout>
@@ -257,7 +255,7 @@
                     android:lineSpacingExtra="5sp"
                     android:textColor="#000000"
                     android:textSize="17sp"
-                    tools:text="Trip to San fran" />
+                    android:text="Trip to San fran" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -268,7 +266,7 @@
                     android:lineSpacingExtra="4sp"
                     android:textColor="#4a4a4a"
                     android:textSize="12sp"
-                    tools:text="18/06/12" />
+                    android:text="18/06/12" />
 
             </LinearLayout>
 
@@ -280,7 +278,7 @@
                 android:lineSpacingExtra="4sp"
                 android:textColor="#4d5468"
                 android:textSize="13sp"
-                tools:text="San fran was one of the coolest places i have ever been all the beautiful sightseeing and …" />
+                android:text="San fran was one of the coolest places i have ever been all the beautiful sightseeing and …" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -316,7 +314,7 @@
                     android:lineSpacingExtra="5sp"
                     android:textColor="#000000"
                     android:textSize="17sp"
-                    tools:text="Shopping list" />
+                    android:text="Shopping list" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -327,7 +325,7 @@
                     android:lineSpacingExtra="4sp"
                     android:textColor="#4a4a4a"
                     android:textSize="12sp"
-                    tools:text="18/06/12" />
+                    android:text="18/06/12" />
 
             </LinearLayout>
 
@@ -339,7 +337,7 @@
                 android:lineSpacingExtra="4sp"
                 android:textColor="#4d5468"
                 android:textSize="13sp"
-                tools:text="So far, this is what we need for our trip:" />
+                android:text="So far, this is what we need for our trip:" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -376,7 +374,7 @@
                     android:lineSpacingExtra="5sp"
                     android:textColor="#000000"
                     android:textSize="17sp"
-                    tools:text="Trip to San fran" />
+                    android:text="Trip to San fran" />
 
                 <TextView
                     android:layout_width="0dp"
@@ -387,7 +385,7 @@
                     android:lineSpacingExtra="4sp"
                     android:textColor="#4a4a4a"
                     android:textSize="12sp"
-                    tools:text="18/06/12" />
+                    android:text="18/06/12" />
 
             </LinearLayout>
 
@@ -399,7 +397,7 @@
                 android:lineSpacingExtra="4sp"
                 android:textColor="#4d5468"
                 android:textSize="13sp"
-                tools:text="San fran was one of the coolest places i have ever been all the beautiful sightseeing and …" />
+                android:text="San fran was one of the coolest places i have ever been all the beautiful sightseeing and …" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
