--- a/app/src/main/res/layout/notebooks_page.xml
+++ b/app/src/main/res/layout/notebooks_page.xml
@@ -28,7 +28,7 @@
         android:textSize="34sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/back"
-        tools:text="Notebooks" />
+        android:text="Notebooks" />
 
     <EditText
         android:id="@+id/search"
@@ -86,7 +86,7 @@
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_height="6dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center_horizontal"
                 android:lineSpacingExtra="4sp"
@@ -124,7 +124,7 @@
 
             <ImageView
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/ic_image_redbook" />
 
