--- a/app/src/main/res/layout/select_color_page.xml
+++ b/app/src/main/res/layout/select_color_page.xml
@@ -17,7 +17,7 @@
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="cancel" />
+        android:text="cancel" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -53,7 +53,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-        tools:text="My diary " />
+        android:text="My diary " />
 
     <Button
         android:id="@+id/button"
